reverse-proxy/dashy/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: dashy-service # needs to match Service name
subsets:
  - addresses:
      - ip: 192.168.0.237
    ports:
      - name: http
        port: 4000
        protocol: TCP
