reverse-proxy/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy-service # needs to match endpoint name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4000
